[gd_scene load_steps=9 format=3 uid="uid://ysd0nqcph1uq"]

[ext_resource type="Texture2D" uid="uid://bsavk3no7bryy" path="res://assets/starbackground.png" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://dabglewe3snp1" path="res://world.gd" id="1_tlwt5"]
[ext_resource type="PackedScene" uid="uid://0dc5bhywxsec" path="res://ship.tscn" id="2_fj7yv"]
[ext_resource type="PackedScene" uid="uid://cqxyh815schnt" path="res://obstacle.tscn" id="4_aqk2v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj7yv"]
size = Vector2(20, 220.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlwt5"]
size = Vector2(367, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqk2v"]
size = Vector2(360, 20)

[sub_resource type="LabelSettings" id="LabelSettings_tlwt5"]

[node name="World" type="Node2D"]
script = ExtResource("1_tlwt5")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("1_f3sb7")
metadata/_edit_lock_ = true

[node name="Ship" parent="." instance=ExtResource("2_fj7yv")]
position = Vector2(63, 87)

[node name="ScreenBorder" type="StaticBody2D" parent="."]
visible = false
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenBorder"]
position = Vector2(-10, 95.5)
shape = SubResource("RectangleShape2D_fj7yv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ScreenBorder"]
position = Vector2(330, 96.75)
shape = SubResource("RectangleShape2D_fj7yv")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ScreenBorder"]
position = Vector2(160, -10)
shape = SubResource("RectangleShape2D_tlwt5")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ScreenBorder"]
position = Vector2(162, 201)
shape = SubResource("RectangleShape2D_tlwt5")

[node name="DeathPlane" type="Area2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathPlane"]
position = Vector2(160, 197)
shape = SubResource("RectangleShape2D_aqk2v")
debug_color = Color(1, 0, 0, 0.294118)

[node name="YouAreDead" type="Label" parent="."]
offset_left = 55.0
offset_top = 39.0
offset_right = 286.0
offset_bottom = 145.0
label_settings = SubResource("LabelSettings_tlwt5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wall" parent="." instance=ExtResource("4_aqk2v")]
position = Vector2(280, 0)

[node name="SpawnZone" type="ColorRect" parent="."]
offset_left = 337.0
offset_top = -8.0
offset_right = 377.0
offset_bottom = 179.0
color = Color(0, 1, 0, 0.203922)

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
